--- a/src/pages/room/room.html
+++ b/src/pages/room/room.html
@@ -19,9 +19,9 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let room of rooms">
-      {{room.roomname}}
-      <ion-icon name="chatboxes" item-end (click)="joinRoom(room.key)"></ion-icon>
+    <ion-item *ngFor="let room of rooms" (click)="joinRoom(room.key)">
+        {{room.roomname}}
+        <ion-icon name="chatboxes" item-end></ion-icon>
     </ion-item>
   </ion-list>
 </ion-content>
