Tirando Welcome PAge, colocando teste de Anúncio, ULTIMA VERSÃO BETA, LANÇAMENTO OFICIAL DIA 01/11

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,6 +17,8 @@
 <ion-content padding>
   <ion-card>
 
+
+
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/imgs/logo.png">
@@ -46,7 +48,7 @@
       </ion-col>
     </ion-row>
     <button ion-button block (click)="abrirDetalhes1()">Detalhes do Sistema</button>
-    <button ion-button block (click)="criarFicha1()">Criar ficha do Sistema</button>
+    <button ion-button block (click)="criarFicha1()">Ficha do Sistema</button>
   </ion-card>
   <ion-content class="card-background-page">
 
