--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -18,7 +18,7 @@
     Entrar com e-mail e senha
   </button>
 
-  <button ion-button block icon-left color="danger" margin-top (click)="signInWithGoogle()">
+  <!--<button ion-button block icon-left color="danger" margin-top (click)="signInWithGoogle()">
     <ion-icon name="logo-google"></ion-icon>
     Entrar com o Google
   </button>
@@ -28,7 +28,7 @@
     Entrar com o Facebook
   </button>
 
-  <!-- <button ion-button block icon-left color="twitter" margin-top (click)="signInWithTwitter()">
+  <button ion-button block icon-left color="twitter" margin-top (click)="signInWithTwitter()">
     <ion-icon name="logo-twitter"></ion-icon>
     Entrar com o Twitter
   </button> -->
