--- a/src/pages/signinwithemail/signinwithemail.html
+++ b/src/pages/signinwithemail/signinwithemail.html
@@ -11,7 +11,13 @@
 
   <form #form="ngForm" novalidate>
     <ion-list>
-
+        <ion-item>
+            <ion-label stacked>Nome de usuário</ion-label>
+            <ion-input type="text" name="displayname" [(ngModel)]="user.displayname" #displayname="ngModel" required></ion-input>
+          </ion-item>
+          <ion-item *ngIf="displayname.errors && (displayname.dirty || displayname.touched)" class="text-danger">
+            O campo é obrigatório
+          </ion-item>
       <ion-item>
         <ion-label stacked>E-mail</ion-label>
         <ion-input type="text" name="email" [(ngModel)]="user.email" #email="ngModel" required></ion-input>
