--- a/src/pages/add-room/add-room.html
+++ b/src/pages/add-room/add-room.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>AddRoom</ion-title>
+    <ion-title>Criar Sala de Bate-Papo</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -17,11 +17,11 @@
   <form (ngSubmit)="addRoom()">
     <ion-list>
       <ion-item>
-        <ion-label floating>Enter Room Name</ion-label>
+        <ion-label floating>Nome da sala </ion-label>
         <ion-input type="text" [(ngModel)]="data.roomname" name="roomname" required=""></ion-input>
       </ion-item>
       <ion-item>
-        <button ion-button full round color="secondary" type="submit">Add</button>
+        <button ion-button full round color="secondary" type="submit">Criar</button>
       </ion-item>
     </ion-list>
   </form>
