conta.html edited online with Bitbucket

--- a/src/pages/conta/conta.html
+++ b/src/pages/conta/conta.html
@@ -14,5 +14,6 @@
 
 
 <ion-content padding>
+    <button ion-button block color="primary" (click)="showRewardedAds()">Assistir anúncio</button>
     <button ion-button block color="primary" (click)="signOut()">Sair</button>
 </ion-content>
