--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,9 +16,6 @@
 
 <ion-content padding>
   <ion-card>
-
-
-
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/imgs/logo.png">
@@ -31,7 +28,7 @@
 
     <ion-card-content>
       <p>Shadow of the Demon Lord é um jogo de interpretação de fantasia dark
-         - um gênero que tece elementos de horror em um mundo de fantasia. </p>
+        - um gênero que tece elementos de horror em um mundo de fantasia. </p>
     </ion-card-content>
 
     <ion-row>
@@ -42,15 +39,45 @@
         </button>
       </ion-col>
       <ion-col center text-center>
-        <ion-note>
-          11h ago
-        </ion-note>
       </ion-col>
     </ion-row>
     <button ion-button block (click)="abrirDetalhes1()">Detalhes do Sistema</button>
     <button ion-button block (click)="criarFicha1()">Ficha do Sistema</button>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/logo.png">
+      </ion-avatar>
+      <h2>Dungeons & Dragons Edição 5</h2>
+      <p>26 de Outubro de 2018</p>
+    </ion-item>
+
+    <img src="assets/imgs/ded.jpg">
+
+    <ion-card-content>
+      <p>Considerado a origem dos RPG's, Dungeons & Dragons (abreviado como D&D ou DnD) é um RPG de alta fantasia desenvolvido
+         originalmente por Gary Gygax e Dave Arneson, e publicado pela primeira vez em 1974 nos
+          Estados Unidos pela TSR, Inc., empresa de Gary Gygax. Hoje o jogo é publicado pela
+          Wizards of the Coast. Suas origens são os wargames de miniaturas
+          (principalmente o Chainmail).</p>
+    </ion-card-content>
+
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <div>12 Likes</div>
+        </button>
+      </ion-col>
+      <ion-col center text-center>
+      </ion-col>
+    </ion-row>
+    <button ion-button block (click)="abrirDetalhes2()">Detalhes do Sistema</button>
+    <button ion-button block (click)="criarFicha2()">Ficha do Sistema</button>
   </ion-card>
   <ion-content class="card-background-page">
 
 
-</ion-content>
+
+
+  </ion-content>
