--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -43,7 +43,7 @@
     </ion-row>
     <button ion-button block (click)="abrirDetalhes1()">Detalhes do Sistema</button>
     <button ion-button block (click)="criarFicha1()">Ficha do Sistema</button>
-
+    <!--
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/imgs/logo.png">
@@ -73,11 +73,7 @@
       </ion-col>
     </ion-row>
     <button ion-button block (click)="abrirDetalhes2()">Detalhes do Sistema</button>
-    <button ion-button block (click)="criarFicha2()">Ficha do Sistema</button>
+    <button ion-button block (click)="criarFicha2()">Ficha do Sistema</button>  -->
   </ion-card>
-  <ion-content class="card-background-page">
 
-
-
-
-  </ion-content>
+</ion-content>
